@@ -1,3 +1,10 @@
+2002-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* mode-info.el (mode-info-version): Release 0.1.3.
+
+	* mi-index.el (mode-info-make-index): Fix the bug that misses
+	candidate titles.
+
 2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* mode-info.el (mode-info-version): Release 0.1.2.
